package io.github.sasori_256.town_planning.common.ui.main;

public interface SceneNavigator {
  void changeScene(String sceneName);
}
