package io.github.sasori_256.town_planning.common.ui.main.seen;

import javax.swing.JPanel;

public class EndPanel extends JPanel {
  public EndPanel() {
    // TODO: エンド画面を実装
  }
}
